<resources>
    <string name="app_name">Example01_ListUsers</string>

    <string name="add_players">AÑADIR USUARIO</string>
    <string name="list_players">LISTAR USUARIO</string>

    //TextView
    <string name="add_players_name">Nombre:</string>
    <string name="add_players_last">Apellido:</string>
    <string name="add_players_DNI">DNI:</string>
    <string name="add_players_phone">Teléfono:</string>
    <string name="add_players_email">Correo:</string>

    //Button
    <string name="button_add">AGREGAR</string>
    <string name="button_back">VOLVER</string>

    //Item
    <string name="item_name">Deivi De la Vega</string>
    <string name="item_button_name">Ver</string>

    //Dialog
    <string name="dialog_title">¿Quieres agregar un nuevo usuario?</string>"

    //DialogAlert
    <string name="dialog_text_alert">ERROR TEXTO</string>"

    //Details User
    <string name="details_user_text">DETALLE DEL USUARIO</string>
</resources>