<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.AddUserActivity">

    <TextView
        android:id="@+id/frameTextAddPlayer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/add_players"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/add_players_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1.1"
            android:autofillHints="name"
            android:background="@color/gray"
            android:inputType="text"
            android:labelFor="@id/text_name"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/add_players_last"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_lastName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1.1"
            android:autofillHints="name"
            android:background="@color/gray"
            android:inputType="text"
            android:labelFor="@id/text_name"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_dni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/add_players_DNI"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_dni"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1.1"
            android:autofillHints="name"
            android:background="@color/gray"
            android:inputType="text"
            android:labelFor="@id/text_name"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3.1"
            android:text="@string/add_players_phone"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <EditText
            android:id="@+id/input_phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1.1"
            android:autofillHints="name"
            android:background="@color/gray"
            android:inputType="phone"
            android:labelFor="@id/text_name"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/add_players_email"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1.1"
            android:autofillHints="name"
            android:background="@color/gray"
            android:inputType="textEmailAddress"
            android:labelFor="@id/text_name"
            android:paddingStart="5dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:ignore="LabelFor,RtlSymmetry" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="17dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/person_icon"
        app:backgroundTint="@color/blue_medium"
        app:fabCustomSize="74dp"
        app:maxImageSize="40dp"
        app:shapeAppearanceOverlay="@style/Circular"
        app:tint="@null" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/blue_black"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/button_add"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:cornerRadius="12dp"
        android:padding="0dp"/>


</LinearLayout>
